--- a/src/app/food/food.component.css
+++ b/src/app/food/food.component.css
@@ -1,13 +1,9 @@
-.media {
-    margin-bottom: 20px;
-}
+/* .media {
+    margin: 20px;
+} */
 
 h4 {
     color: #570404 !important;
-}
-
-form {
-    margin-bottom: 40px;
 }
 
 p {
